--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-tensorflow
-numpy==1.24.4
-matplotlib==3.8.0
-scikit-learn==1.3.0
-pandas==2.0.3
-seaborn==0.12.2
-keras~=2.13.1
+streamlit==1.26.0
+tensorflow==2.18.0
+numpy==1.23.5
+matplotlib==3.7.2
+pillow==9.5.0
